force-app/main/default/objects/animalos__Note_Template__c/animalos__Note_Template__c.object-meta.xml
<CustomObject>
    <label>Note Template</label>
    <nameField>
        <displayFormat>NT{0000}</displayFormat>
        <label>Note Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>