force-app/main/default/objects/animalos__Note_Template__c/validationRules/animalos__Content_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>animalos__Content_Field_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(animalos__Content__c)</errorConditionFormula>
    <errorDisplayField>animalos__Content__c</errorDisplayField>
    <errorMessage>Content field is required</errorMessage>
</ValidationRule>