force-app/main/default/objects/animalos__Note_Template__c/listViews/All_Note_Templates.listView-meta.xml
<ListView>
    <fullName>All_Note_Templates</fullName>
    <columns>NAME</columns>
    <columns>animalos__Status__c</columns>
    <columns>animalos__Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Note Templates</label>
</ListView>